2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (help_cb):
	* themes.c: (phelp_cb): update for screen-exec changes.

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* geyes.c (destroy_cb): Destroy the preferences dialog
	when the applet is destroyed.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_GeyesApplet.server.in.in: added bugzilla attributtes

2002-10-29  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* themes.c: Change the preferences list's mnemonic 
	to <Alt>+T. Fixes #92483

2002-09-24  Muktha  <muktha.narayan@wipro.com>
	
	* themes.c: add colon at the end of 'Theme Name'
	label. Fixes #94035.

2002-09-20  Mark McLoughlin  <mark@skynet.ie>

	* themes.c: (properties_cb): fixup a silly
	that cauased the dialog to not be realised
	on the correct screen. Fixes #93397.

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (about_cb), (help_cb):
	* themes.c: (phelp_cb), (properties_cb): kill the
	HAVE_GTK_MULTIHEAD conditionals - we require gtk
	HEAD now.

2002-09-13  Kjartan Maraas  <kmaraas@gnome.org>

	* geyes.c (applet_back_change): Don't leak the style.
	
2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* geyes.c: (help_cb):
	* themes.c: (phelp_cb): use the multiscreen
	gnome_help variants.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet into libexec.

	* GNOME_GeyesApplet.server.in: move .server.in to
	.server.in.in to allow for libexec dir substitution.

2002-07-11  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (about_cb):
	* themes.c: (properties_cb): realise dialogs
	on the same screen as the applet.

2002-07-10  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: use unsafe verb callbacks to
	minise casting.
	(about_cb): use gtk_window_present.

	* themes.c: (properties_cb): ditto.

2002-05-31 Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct
	location. Fixes #83621. 
