@@ -1,3 +1,8 @@
+2003-03-15  Kevin Vandersloot <kfv101@psu.edu>
+
+	* geyes.c: small optimization of display and use GtkImage to get rid
+	of flashing.
+
 2003-03-07  Mark McLoughlin  <mark@skynet.ie>
 
 	* geyes.c: (help_cb):
